--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>#Thala for a reason</title>
+    <title>7 Up 7 Down</title>
     <link rel="shortcut icon" href="black_logo.png" type="image/png">
     <link rel="stylesheet" href="home.css">
 </head>
 <body>
     <nav>
         <div class="navbar-div">
-            <h2><img src="thala.png" alt="msd">UP<img src="thala.png" alt="msd">DOWN</h2>
+            <h2>7 UP 7 DOWN</h2>
         </div>
     </nav>
 
@@ -51,7 +51,7 @@
                         <ul>
                             <li>7 Down: The sum of the dice will be less than 7 (2 to 6).</li>
                             <li>7 Up: The sum of the dice will be more than 7 (8 to 12).</li>
-                            <li>Thala: The sum of the dice will be exactly 7.</li>
+                            <li>7: The sum of the dice will be exactly 7.</li>
                         </ul>
                     </li>
                     <li>After all bets are placed, the dice roller rolls both dice at once.</li>
