--- a/game.html
+++ b/game.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>#Thala for a reason</title>
+    <title>7 Up 7 Down</title>
     <link rel="shortcut icon" href="black_logo.png" type="image/png">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -12,7 +12,7 @@
 <body>
     <nav>
         <div class="navbar-div">
-            <h2><img src="thala.png" alt="msd">UP<img src="thala.png" alt="msd">DOWN</h2>
+            <h2>7 UP 7 DOWN</h2>
         </div>
     </nav>
     <header>
@@ -49,7 +49,7 @@
        <div class="button-container"> <!-- div for button -->
         <button type="submit" class="btn btn-warning select_bet_type">Select Bet Type</button>
         <button type="button" class="btn btn-warning 7_down bet_type" style="display:none;">7⬇️</button>
-        <button type="button" class="btn btn-warning sev bet_type" style="display:none;">THALA</button>
+        <button type="button" class="btn btn-warning sev bet_type" style="display:none;">7</button>
         <button type="button" class="btn btn-warning 7_up bet_type" style="display:none;">7⬆️</button>
         <button type="button" class="btn btn-warning continue play-again" style="display:none;">Play-Again🔄️</button>
         <button type="button" class="btn btn-warning continue exit" style="display:none;">Exit</button>
@@ -65,7 +65,7 @@
        <!-- JavaScript file -->
   <!-- Let's not forget the footer -->
    <footer>
-      #Thala🎲for a🎲reason
+      #Built with ❤️ by 5ud21
     </footer>
     <script src="dice.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
